Fix collapse alignment

--- a/src/main/com.sonicle.webtop.core/laf/nethesis/wtheme-nethesis-override.css
+++ b/src/main/com.sonicle.webtop.core/laf/nethesis/wtheme-nethesis-override.css
@@ -202,6 +202,7 @@ color-ct-ok-1 -> Green/700
 .wt-tool-hd-wrap { background-color: var(--wt-theme-color-surface-ct); padding-top: 10px; padding-left: 6px; }
 .wt-tool-hd-title { font-size: var(--wt-theme-fontsize-lg); font-weight: 500; }
 .wt-tool-hd-separator { border-top-color: #e5e7eb !important; } /* Gray/200 FIXME: evaluate to change directly fieldset color in theme */
+.wt-tool-foo { padding-top: 10px; padding-bottom: 15px; }
 
 /* ---------- AccountMenu */
 /* Pad user-info */
